--- a/google_books/index.html
+++ b/google_books/index.html
@@ -1,23 +1,36 @@
 <!DOCTYPE html>
-<html lang="es">
-<head>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-  <link rel="stylesheet" typre="text/css" href="css/style.css">
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <div class="container">
-    <div id="title" class="center">
-      <h1 id="header" class="text-center mt-5">Google books </h1>
-      <div class="row">
-        <div id="input" class="input-group mx-auto col-lg-6 col-md-8 col-sm-12">
-          <input id="search-box" type="text" class="form-control" placeholder="Search Books!...">
-          <button id="search" class="btn btn-primary" onclick="">Search</button>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Book Finder</title>
+    <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
+  </head>
+  <body>
+    <div class="container">
+      <div id="title" class="center">
+        <h1 id="header" class="text-center mt-5">Book Finder</h1>
+        <div class="row">
+          <div id="input" class="input-group mx-auto col-lg-6 col-md-8 col-sm-12">
+            <input id="search-box" type="text" class="form-control" placeholder="Search Books!...">
+            <button id="search" class="btn btn-primary" onclick="">Search</button>
         </div>
+        </div>
+      </div>
+      <div class="book-list" >
+        <h2 class="text-center">Search Result</h2>
+        <div id="list-output" class="">
+          <div class="row">
+
+          </div>
+
+        </div>
+      </div>
     </div>
-  </div>
-<script src="js/app.js"></script>
-</body>
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/index.js"></script>
+  </body>
 </html>
