--- a/google_books/index.html
+++ b/google_books/index.html
@@ -2,13 +2,13 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Book Finder</title>
+    <title>Google Book</title>
     <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
   </head>
   <body>
     <div class="container">
       <div id="title" class="center">
-        <h1 id="header" class="text-center mt-5">Book Finder</h1>
+        <h1 id="header" class="text-center mt-5">Google Book</h1>
         <div class="row">
           <div id="input" class="input-group mx-auto col-lg-6 col-md-8 col-sm-12">
             <input id="search-box" type="text" class="form-control" placeholder="Search Books!...">
@@ -17,7 +17,7 @@
         </div>
       </div>
       <div class="book-list" >
-        <h2 class="text-center">Search Result</h2>
+        <h2 class="text-center">Resultados</h2>
         <div id="list-output" class="">
           <div class="row">
 
